--- a/roles/create/tasks/main.yaml
+++ b/roles/create/tasks/main.yaml
@@ -8,7 +8,7 @@
 
 - fail:
     msg: "Please make sure Google Cloud SDK is installed before executing the role."
-  when: gcloud_installed | failed
+  when: gcloud_installed is failed
 
 - name: Check if admin rule is already present
   command: "gcloud compute firewall-rules list --filter='name:{{ firewall_admin_rules.name }}' --format='value(NAME)'"
